--- a/src/components/CoinCard/CoinCard.css
+++ b/src/components/CoinCard/CoinCard.css
@@ -1,3 +1,115 @@
 .card-wrapper {
-  padding: 15px;
+  margin: 15px;
+  background: #1F2C3C;
+  border-radius: 10px;
+  box-shadow: 2px 2px 0px 0px rgba(9, 40, 55, 0.4);
+}
+
+.card {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid #031D35;
+}
+
+.card-img {
+  width: 40px;
+  height: 40px;
+}
+
+.card-symbol {
+  font-size: 12px;
+  text-align: center;
+  padding-top: 5px;
+}
+
+.card-name__wrapper {
+  text-align: right;
+}
+
+.card-name {
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin: 0 0 10px 0;
+}
+.card-price {
+  padding-right: 5px;
+  font-weight: 300;
+}
+
+.card-price__symbol {
+  padding-right: 0;
+}
+
+.card-change__wrapper {
+  padding: 10px;
+}
+
+.card-price__changed {
+  color: #FFF;
+  text-transform: uppercase;
+  font-size: 10px;
+  position: relative;
+}
+
+.card-price__changed-plus,
+.card-price__changed-minus {
+  color: #07CC00;
+  padding-right: 12px;
+}
+
+.card-price__changed-minus {
+  color: #FF1302;
+}
+
+.card-price__changed-plus:before,
+.card-price__changed-plus:after,
+.card-price__changed-minus:before,
+.card-price__changed-minus:after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+}
+
+.card-price__changed-plus:before,
+.card-price__changed-minus:before {
+  width: 2px;
+  height: 10px;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #07CC00;
+}
+
+.card-price__changed-plus:after,
+.card-price__changed-minus:after {
+  width: 0; 
+  height: 0; 
+  right: 2px;
+  top: 1px;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 4px solid #07CC00;
+}
+
+.card-price__changed-minus:before {
+  background-color: #FF1302;
+}
+
+.card-price__changed-minus:after {
+  border-bottom: 4px solid #FF1302;  
+}
+
+@media(min-width: 375px) {
+  .card-price__changed {
+    font-size: 12px;
+  }
+}
+
+@media(min-width: 768px) {
+  .card-price__changed {
+    font-size: 14px;
+  }
 }
