--- a/src/containers/Layout/Layout.css
+++ b/src/containers/Layout/Layout.css
@@ -4,9 +4,13 @@
 }
 
 .app-header {
+  font-size: 24px;
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   text-align: center;
-  margin: 0;
-  padding: 20px 0;
+  margin: 20px 0;
+  padding: 0 15px;
 }
 
 @media(min-width: 768px) {
