--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,22 +1,41 @@
 .modal {
   position: fixed;
   z-index: 500;
-  background-color: #FFF;
-  width: 70%;
+  background-color: rgb(3, 29, 53);
+  width: 96%;
   border: 1px solid #838282;
   border-radius: 6px;
-  padding: 16px;
-  left: 15%;
-  top: 30%;
+  left: 2%;
+  top: 120px;
   box-sizing: border-box;
   transition: all 600ms ease-out;
-  box-shadow: 1px 1px 1px #838282;
   color: #000;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 340px) {
   .modal {
-      width: 500px;
-      left: calc(50% - 250px);
+    top: 90px;
+  }
+}
+
+@media (min-width: 452px) {
+  .modal {
+    top: 60px;
+  }
+}
+
+@media (min-width: 768px) {
+  .modal {
+    padding: 40px;
+    width: 90%;
+    left: 5%;
+  }
+}
+
+@media (min-width: 992px) {
+  .modal {
+    padding: 40px;
+    width: 80%;
+    left: 10%;
   }
 }
